--- a/geofencing_pkgs/package.xml
+++ b/geofencing_pkgs/package.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>geofencing_pkgs</name>
-  <version>0.0.0</version>
-  <description>The geofencing package</description>
+  <version>0.0.1</version>
+  <description>A ROScopter-compatible Geofencing package.</description>
 
-  <maintainer email="natetoombs@gmail.com">nathan</maintainer>
+  <maintainer email="natetoombs@gmail.com">Nathan Toombs</maintainer>
+  <author email="natetoombs@gmail.com">Nathan Toombs</author>
+  
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <url type="repository">https://github.com/natetoombs/geofencing</url>
+  <url type="bugtracker">https://github.com/natetoombs/geofencing/issues</url>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
